[py12] core tests
Signed-off-by: can <can@anyscale.com>

--- a/python/requirements_compiled.txt
+++ b/python/requirements_compiled.txt
@@ -156,10 +156,10 @@ aws-sam-translator==1.81.0
 aws-xray-sdk==2.12.1
     # via moto
 ax-platform==0.3.2
-    # via -r /home/ubuntu/ray/ci/../python/requirements/ml/tune-requirements.txt
-azure-cli-core==2.62.0
-    # via -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
-azure-cli-telemetry==1.1.0
+    # via -r /ray/ci/../python/requirements/ml/tune-requirements.txt
+azure-cli-core==2.43.0
+    # via -r /ray/ci/../python/requirements/test-requirements.txt
+azure-cli-telemetry==1.0.8
     # via azure-cli-core
 azure-common==1.1.28
     # via
@@ -171,8 +171,8 @@ azure-core==1.29.5
     #   azure-identity
     #   azure-mgmt-core
     #   msrest
-azure-identity==1.17.1
-    # via -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
+azure-identity==1.14.1
+    # via -r /ray/ci/../python/requirements/test-requirements.txt
 azure-mgmt-compute==31.0.0
     # via -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
 azure-mgmt-core==1.4.0
@@ -343,9 +343,7 @@ configspace==0.7.1
     #   -r /home/ubuntu/ray/ci/../python/requirements/ml/tune-requirements.txt
     #   hpbandster
 contextlib2==21.6.0
-    # via
-    #   ml-collections
-    #   pytest-shutil
+    # via ml-collections
 contourpy==1.1.1
     # via matplotlib
 crc32c==2.3
@@ -472,7 +470,7 @@ evaluate==0.4.0
     # via -r /home/ubuntu/ray/ci/../python/requirements/ml/train-test-requirements.txt
 everett==3.3.0
     # via comet-ml
-execnet==2.1.1
+execnet==2.0.2
     # via pytest-shutil
 executing==2.0.1
     # via stack-data
@@ -1061,7 +1059,7 @@ ml-dtypes==0.3.2
 mlagents-envs==0.28.0
     # via -r /home/ubuntu/ray/ci/../python/requirements/ml/rllib-test-requirements.txt
 mlflow==2.9.2
-    # via -r /home/ubuntu/ray/ci/../python/requirements/ml/core-requirements.txt
+    # via -r /ray/ci/../python/requirements/ml/core-requirements.txt
 mock==5.1.0
     # via pytest-shutil
 modin==0.22.2
@@ -1453,7 +1451,7 @@ parso==0.8.3
     # via jedi
 partd==1.4.1
     # via dask
-path==16.14.0
+path==16.7.1
     # via path-py
 path-py==12.5.0
     # via pytest-shutil
@@ -1701,21 +1699,18 @@ pytest==7.4.4
     #   -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
     #   pytest-asyncio
     #   pytest-docker-tools
-    #   pytest-fixture-config
     #   pytest-forked
     #   pytest-lazy-fixture
     #   pytest-remotedata
     #   pytest-repeat
     #   pytest-rerunfailures
-    #   pytest-shutil
     #   pytest-sphinx
     #   pytest-sugar
     #   pytest-timeout
-    #   pytest-virtualenv
 pytest-asyncio==0.16.0
     # via -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
 pytest-docker-tools==3.1.3
-    # via -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
+    # via -r /ray/ci/../python/requirements/test-requirements.txt
 pytest-fixture-config==1.7.0
     # via pytest-virtualenv
 pytest-forked==1.4.0
@@ -1729,7 +1724,7 @@ pytest-remotedata==0.3.2
 pytest-repeat==0.9.3
     # via -r /home/ubuntu/ray/ci/../python/requirements/ml/data-test-requirements.txt
 pytest-rerunfailures==11.1.2
-    # via -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
+    # via -r /ray/ci/../python/requirements/test-requirements.txt
 pytest-shutil==1.7.0
     # via pytest-virtualenv
 pytest-sphinx @ git+https://github.com/ray-project/pytest-sphinx
@@ -1737,9 +1732,9 @@ pytest-sphinx @ git+https://github.com/ray-project/pytest-sphinx
 pytest-sugar==0.9.5
     # via -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
 pytest-timeout==2.1.0
-    # via -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
-pytest-virtualenv==1.7.0 ; python_version < "3.12"
-    # via -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
+    # via -r /ray/ci/../python/requirements/test-requirements.txt
+pytest-virtualenv==1.7.0
+    # via -r /ray/ci/../python/requirements/test-requirements.txt
 python-dateutil==2.8.2
     # via
     #   adal
@@ -2053,7 +2048,6 @@ six==1.16.0
     #   patsy
     #   promise
     #   pytest-remotedata
-    #   pytest-shutil
     #   python-dateutil
     #   pyu2f
     #   pyvmomi
@@ -2196,7 +2190,6 @@ tensorstore==0.1.45
     #   orbax-checkpoint
 termcolor==2.3.0
     # via
-    #   pytest-shutil
     #   pytest-sugar
     #   tensorflow
     #   tensorflow-datasets
@@ -2438,8 +2431,7 @@ uvloop==0.19.0
     # via vsphere-automation-sdk
 virtualenv==20.25.3
     # via
-    #   -r /home/ubuntu/ray/ci/../python/requirements.txt
-    #   -r /home/ubuntu/ray/ci/../python/requirements/test-requirements.txt
+    #   -r /ray/ci/../python/requirements.txt
     #   pytest-virtualenv
     # via vsphere-automation-sdk
     # via vsphere-automation-sdk
