--- a/.buildkite/rllib.rayci.yml
+++ b/.buildkite/rllib.rayci.yml
@@ -211,7 +211,7 @@ steps:
     depends_on: rllibgpubuild
 
   - label: ":brain: rllib: flaky multi-gpu tests"
-    key: rllib_flaky_gpu_tests
+    key: rllib_flaky_multi_gpu_tests
     tags: 
       - rllib_gpu
       - gpu
@@ -226,6 +226,22 @@ steps:
     depends_on: rllibgpubuild
     soft_fail: true
 
+  - label: ":brain: rllib: flaky gpu tests"
+    key: rllib_flaky_gpu_tests
+    tags: 
+      - rllib_gpu
+      - gpu
+      - skip-on-premerge
+    instance_type: gpu
+    commands:
+      - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib --run-flaky-tests
+        --build-name rllibgpubuild
+        --only-tags gpu
+        --test-env=RAY_USE_MULTIPROCESSING_CPU_COUNT=1 
+        --test-env=RLLIB_NUM_GPUS=1
+    depends_on: rllibgpubuild
+    soft_fail: true
+
   - label: ":brain: rllib: flaky tests (learning tests)"
     key: rllib_flaky_tests_01
     tags: 
@@ -234,22 +250,22 @@ steps:
     instance_type: large
     commands:
       # torch
-      - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib --run-flaky-tests --parallelism-per-worker 3
+      - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib --run-flaky-tests
         --only-tags fake_gpus,learning_tests_discrete,learning_tests_with_ray_data,crashing_cartpole,stateless_cartpole,learning_tests_continuous
-        --except-tags tf_only,tf2_only,multi_gpu
+        --except-tags tf_only,tf2_only,multi_gpu,gpu
         --test-arg --framework=torch
 
       # tf2-static-graph
-      - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib --run-flaky-tests --parallelism-per-worker 3
+      - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib --run-flaky-tests
         --only-tags tf_only
-        --except-tags torch_only,tf2_only,no_tf_static_graph,multi_gpu
+        --except-tags torch_only,tf2_only,no_tf_static_graph,multi_gpu,gpu
         --test-arg --framework=tf
         --skip-ray-installation # reuse the same docker image as the previous run
 
       # tf2-eager-tracing
-      - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib --run-flaky-tests --parallelism-per-worker 3
+      - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib --run-flaky-tests
         --only-tags tf2_only
-        --except-tags fake_gpus,torch_only,multi_gpu,no_tf_eager_tracing
+        --except-tags fake_gpus,torch_only,multi_gpu,no_tf_eager_tracing,gpu
         --test-arg --framework=tf2
         --skip-ray-installation # reuse the same docker image as the previous run
     depends_on: rllibbuild
@@ -271,20 +287,21 @@ steps:
       # rlmodule tests
       - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib --run-flaky-tests --parallelism-per-worker 3
         --only-tags rlm
+         --except-tags multi_gpu,gpu
         --test-env RLLIB_ENABLE_RL_MODULE=1
         --test-env RAY_USE_MULTIPROCESSING_CPU_COUNT=1
         --skip-ray-installation # reuse the same docker image as the previous run
 
       # algorithm, models
       - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib  --run-flaky-tests --parallelism-per-worker 3
-        --except-tags learning_tests,memory_leak_tests,examples,tests_dir,documentation,multi_gpu,no_cpu,torch_2.x_only_benchmark,manual
+        --except-tags learning_tests,memory_leak_tests,examples,tests_dir,documentation,multi_gpu,gpu,no_cpu,torch_2.x_only_benchmark,manual
         --test-env RAY_USE_MULTIPROCESSING_CPU_COUNT=1
         --skip-ray-installation # reuse the same docker image as the previous run
 
       # tests/ dir
       - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib --run-flaky-tests --parallelism-per-worker 3
         --only-tags tests_dir
-        --except-tags multi_gpu,manual
+        --except-tags multi_gpu,gpu,manual
         --test-env RAY_USE_MULTIPROCESSING_CPU_COUNT=1
         --skip-ray-installation # reuse the same docker image as the previous run
     depends_on: rllibbuild
@@ -300,7 +317,7 @@ steps:
       - bazel run //ci/ray_ci:test_in_docker -- //rllib/... rllib 
         --run-flaky-tests
         --only-tags memory_leak_tests
-        --except-tags flaky
+        --except-tags flaky,gpu,multi_gpu
         --test-arg --framework=tf2
     depends_on: rllibbuild
     soft_fail: true
