--- a/release/perf_metrics/benchmarks/many_tasks.json
+++ b/release/perf_metrics/benchmarks/many_tasks.json
@@ -1,14 +1,14 @@
 {
-    "_dashboard_memory_usage_mb": 1232.416768,
+    "_dashboard_memory_usage_mb": 1293.504512,
     "_dashboard_test_success": true,
-    "_peak_memory": 5.37,
-    "_peak_process_memory": "PID\tMEM\tCOMMAND\n3733\t1.96GiB\t/home/ray/anaconda3/bin/python /home/ray/anaconda3/lib/python3.9/site-packages/ray/dashboard/dashboa\n3618\t1.68GiB\t/home/ray/anaconda3/lib/python3.9/site-packages/ray/core/src/ray/gcs/gcs_server --log_dir=/tmp/ray/s\n4484\t0.74GiB\tpython distributed/test_many_tasks.py --num-tasks=10000\n1235\t0.28GiB\t/app/product/go/infra/anyscaled/anyscaled_/anyscaled startv2 --control_plane_url=https://console.any\n2417\t0.24GiB\t/usr/bin/vector --watch-config --log-format json --config-yaml /etc/vector/vector.yaml\n4683\t0.09GiB\tray::StateAPIGeneratorActor.start\n4621\t0.08GiB\tray::DashboardTester.run\n4285\t0.07GiB\tray::JobSupervisor\n3899\t0.07GiB\t/home/ray/anaconda3/bin/python -u /home/ray/anaconda3/lib/python3.9/site-packages/ray/_private/runti\n3025\t0.07GiB\t/usr/bin/python3 /app/infra/dataplane/webterminal/webterminal_sidecar_image.binary.runfiles/product/",
+    "_peak_memory": 5.63,
+    "_peak_process_memory": "PID\tMEM\tCOMMAND\n3510\t2.06GiB\t/home/ray/anaconda3/lib/python3.9/site-packages/ray/core/src/ray/gcs/gcs_server --log_dir=/tmp/ray/s\n3625\t1.98GiB\t/home/ray/anaconda3/bin/python /home/ray/anaconda3/lib/python3.9/site-packages/ray/dashboard/dashboa\n4513\t0.74GiB\tpython distributed/test_many_tasks.py --num-tasks=10000\n2094\t0.3GiB\tvector --watch-config --log-format json --config-yaml /etc/vector/vector.yaml\n1119\t0.28GiB\t/app/product/go/infra/anyscaled/anyscaled_/anyscaled startv2 --control_plane_url=https://console.any\n4726\t0.09GiB\tray::StateAPIGeneratorActor.start\n4670\t0.08GiB\tray::DashboardTester.run\n2434\t0.07GiB\t/usr/bin/python3 /app/infra/dataplane/webterminal/webterminal_sidecar_image.binary.runfiles/product/\n4312\t0.07GiB\tray::JobSupervisor\n3795\t0.07GiB\t/home/ray/anaconda3/bin/python -u /home/ray/anaconda3/lib/python3.9/site-packages/ray/_private/runti",
     "num_tasks": 10000,
     "perf_metrics": [
         {
             "perf_metric_name": "tasks_per_second",
             "perf_metric_type": "THROUGHPUT",
-            "perf_metric_value": 578.8766226882515
+            "perf_metric_value": 570.9662463612389
         },
         {
             "perf_metric_name": "used_cpus_by_deadline",
@@ -18,21 +18,21 @@
         {
             "perf_metric_name": "dashboard_p50_latency_ms",
             "perf_metric_type": "LATENCY",
-            "perf_metric_value": 141.285
+            "perf_metric_value": 169.765
         },
         {
             "perf_metric_name": "dashboard_p95_latency_ms",
             "perf_metric_type": "LATENCY",
-            "perf_metric_value": 1649.419
+            "perf_metric_value": 2669.048
         },
         {
             "perf_metric_name": "dashboard_p99_latency_ms",
             "perf_metric_type": "LATENCY",
-            "perf_metric_value": 3448.302
+            "perf_metric_value": 4126.598
         }
     ],
     "success": "1",
-    "tasks_per_second": 578.8766226882515,
-    "time": 317.2748382091522,
+    "tasks_per_second": 570.9662463612389,
+    "time": 317.5141701698303,
     "used_cpus": 2500.0
 }
