[doc][build] add a master command for doc build
Signed-off-by: can <can@anyscale.com>

--- a/.buildkite/build.rayci.yml
+++ b/.buildkite/build.rayci.yml
@@ -45,7 +45,7 @@ steps:
     key: doc_build
     instance_type: medium
     commands:
-      - make -C doc/ html
+      - bazel run //ci/ray_ci/doc:cmd_build
     depends_on: docbuild
     job_env: docbuild
 
