--- a/ci/ray_ci/doc/BUILD.bazel
+++ b/ci/ray_ci/doc/BUILD.bazel
@@ -7,6 +7,13 @@ py_binary(
     deps = [":doc"],
 )
 
+py_binary(
+    name = "cmd_build",
+    srcs = ["cmd_build.py"],
+    deps = [":doc"],
+    exec_compatible_with = ["//:hermetic_python"],
+)
+
 py_library(
     name = "doc",
     srcs = glob(
@@ -17,6 +24,9 @@ py_library(
         ],
     ),
     visibility = ["//ci/ray_ci/doc:__subpackages__"],
+    deps = [
+        "//ci/ray_ci:ray_ci_lib",
+    ],
 )
 
 py_test(
