[doc][build] build doc with python 3.12
Signed-off-by: can <can@anyscale.com>

--- a/.buildkite/build.rayci.yml
+++ b/.buildkite/build.rayci.yml
@@ -47,7 +47,7 @@ steps:
     commands:
       - bazel run //ci/ray_ci/doc:cmd_build
     depends_on: docbuild
-    job_env: docbuild
+    job_env: docbuild-py3.12
 
   - label: ":tapioca: build: ray py{{matrix}} docker (x86_64)"
     tags:
